--- a/style.css
+++ b/style.css
@@ -23,7 +23,9 @@
 
 }
 
-.nav-item .nav-link::after{
+
+
+.nav-link::after{
     content: '';
     position: absolute;
     width: 100%;
@@ -37,14 +39,49 @@
     
 }
 
-.nav-item .nav-link:hover::after{
+ .nav-link:hover::after,  .nav-link.active::after{
     transform: scaleX(1);
     transform-origin: bottom left;
 }
 
+.job::after{
+content: "|";
+animation: typing 5s infinite ease-in;
+}
+
+@keyframes typing{
+    0%{content: " |"}
+    5%{content: " D|"}
+    10%{content: " De|"} 
+    15%{content: " Dev|"}
+    20%{content: " Deve|"}
+    25%{content: " Devel|"}
+    30%{content: " Develo|"}
+    35%{content: "  Develop|"}
+    40%{content: " Develope|"}
+    45%{content: " Developer|"}
+    50%{content: " Developer |"}
+      
+    55%{content: " Developer|"}
+    60%{content: " Develope|"}
+    65%{content: " Develop|"}
+    70%{content: " Develo|"}
+    75%{content: " Devel|"}
+    80%{content: " Deve|"}
+    85%{content: " Dev|"}
+    90%{content: " De|"}
+    95%{content: " D|"}
+    100%{content: " |"}
+   
+
+}
+
+
 .bg-gray-light{
     background-color: #F5F5F5;
 }
+
+
 
 .box-shadow-full {
     padding: 3rem 1.25rem;
@@ -70,6 +107,27 @@
 
 }
 
+/* skills */
+.progress{
+    border-radius: 0;
+    height: 0.7rem;
+}
+
+/* Services */
+
+
+.service-wrapper div{
+    border:10px solid #0078ff;
+    border-radius: 50%;
+   transition: all 0.5s ease;
+}
+.service-box:hover .service-wrapper div{
+  background-color: #0078ff;
+  color:#fff;
+  border-color:#b5d4f6f2 ;
+}
+
+/* counter */
 .icon{
     width:2rem;
     height: 2rem;
@@ -77,17 +135,33 @@
 }
 
 .counter-icon{
-    border-width:15px !important;
+    border-width:8px !important;
 }
-
 
 
 section#counter{
 background-image: url('images/post-3.jpg');
 background-position: center center;
-background-size: cover;
+background-size: contain;
 position: relative;
 background-attachment: fixed;
+}
+
+/* Porofolio */
+
+.work-img{
+    overflow: hidden;
+    width: 100%;
+}
+
+
+#portofolio .card-img-top{
+    transition: transform 0.5s ease-in-out;
+    
+}
+
+#portofolio .card:hover .card-img-top{
+   transform: scale(1.3); 
 }
 
 .title-box{
@@ -110,7 +184,28 @@ background-attachment: fixed;
     position:relative;
 }
 
-.testimonial::after, #counter::after{
+
+.carousel-indicators [data-bs-target]{
+  width:12px;
+  height:12px;
+  border-radius: 50%;
+}
+
+/* blog */
+.w-15{
+    width: 2rem;
+}
+
+/* contact */
+section#contact{
+    background-image: url('images/overlay-bg.jpg');
+    background-position: center center;
+    background-size: cover;
+    position:relative;
+}
+
+/* overlay */
+.testimonial::after, #counter::after, section#contact::after {
   content: "";
   background-color: #0078ff;
   width: 100%;
@@ -121,13 +216,8 @@ background-attachment: fixed;
   opacity: 0.7;
 }
 
-.carousel, .single-counter{
+.carousel, .single-counter, #contact .row {
     z-index:1;
-}
-
-.carousel-indicators [data-bs-target]{
-  width:12px;
-  height:12px;
-  border-radius: 50%;
+    position: relative;
 }
 
