--- a/style.css
+++ b/style.css
@@ -50,6 +50,23 @@ li{
     transform-origin: bottom left;
 }
 
+.dropdown-menu li {
+    position: relative;
+    }
+    .dropdown-menu .dropdown-submenu {
+    display: none;
+    position: absolute;
+    left: 100%;
+    top: -7px;
+    }
+    .dropdown-menu .dropdown-submenu-left {
+    right: 100%;
+    left: auto;
+    }
+    .dropdown-menu > li:hover > .dropdown-submenu {
+    display: block;
+    }
+
 #about, #services, #counter, #blog, #contact {
     padding-top: 42px;
     }
@@ -286,7 +303,7 @@ footer a{
     bottom:2%;
     width:40px;
     height: 40px;
-
+    cursor: pointer;
    
    
 }
@@ -297,6 +314,7 @@ footer a{
    padding:5px 10px;
    border-radius: 50%;
     font-size: 1.75rem;
+    color:#fff;
 }
 
 /* media */
